removed overflow hidden as was causing issues

--- a/part-1/css/styles.css
+++ b/part-1/css/styles.css
@@ -25,7 +25,6 @@ body {
 .box {
   width: 200px;
   height: 200px;
-  overflow: hidden;
 }
 
 .red {
